Fix icon clipping
- caused by https://github.com/angular/components/pull/12429
- update to ng 14.1.0

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -66,3 +66,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     transform: rotate(359deg);
   }
 }
+
+/* fixes */
+
+/* overflow:hidden added by https://github.com/angular/components/pull/12429 which breaks layout */
+.mat-icon {
+  overflow: unset!important;
+}
